--- a/proxmox/ansible.cfg
+++ b/proxmox/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 
 inventory   = ./hosts
-log_path    = ./logs/ansible.log
+log_path    = ./log/ansible.log
 roles       = ./roles
 roles_path  = ./roles               
 
