--- a/ws/play/jn-slave-config-ub-for-android.yml
+++ b/ws/play/jn-slave-config-ub-for-android.yml
@@ -1,14 +1,14 @@
 ---
-# Playbook PreInstall Slave jenkins (Ubuntu 1604 / 1804) Android-SDK
+# Playbook PreInstall Slave jenkins on Ubuntu to Android-SDK
 - name: Install Jenkins
   hosts: "{{ jenkins_host }}"
   gather_facts: no
   become: yes  #sudo
   become_method: sudo
   
-  environment:
-    ANDROID_HOME: /usr/lib/android-sdk
-    PATH: $ANDROID_HOME/cmdline-tools/tools/bin:$PATH
+  #environment:
+    #ANDROID_HOME: /usr/lib/android-sdk
+    #PATH: $ANDROID_HOME/cmdline-tools/tools/bin:$PATH
     # PATH=$ANDROID_HOME/cmdline-tools/tools/bin:$PATH
     # PATH: /var/local/nvm/versions/node/v4.2.1/bin:{{ ansible_env.PATH }}
 
@@ -21,16 +21,16 @@
   tasks:
     - name: UPDATE (apt update -y)
       apt:
-        #update_cache: yes
+        update_cache: yes
       register: apt_update
     - debug: msg="{{ apt_update }}"
 
-    #- name: UPGRADE (apt upgrade -y)
-    # apt:
-    #    upgrade: 'yes'
-    #  register: apt_upgrade
+    - name: UPGRADE (apt upgrade -y)
+      apt:
+        upgrade: 'yes'
+      register: apt_upgrade
 
-    #- debug: msg="{{ apt_upgrade }}"
+    - debug: msg="{{ apt_upgrade }}"
 
     - name: Install tools for adding PPA repositories
       become: true
@@ -38,11 +38,11 @@
         name: software-properties-common
         state: latest
     
-    - name: Install packages  
+    - name: Install need packages  
       apt:
         name: '{{ item }}'
         state: present
-        #update_cache: true
+        update_cache: true
       loop:
       - python3-pip
       - zip
@@ -55,29 +55,33 @@
       #- openjdk-8-jdk-headless
       - gnupg
       - gnupg[12]
-      #- android-sdk adb
-
-      
+      - android-sdk
+      - adb
+   
     - name: CREATE FOLDER for Jenkins jobs
       file:
         path: "/usr/jenkins/"
         state: directory
         mode: '0777'
 
-    - name: CREATE FOLDER for 
+    - name: CREATE FOLDER for Android-SDK
       file:
         path: "/usr/lib/android-sdk/cmdline-tools/tools/"
         state: directory
         mode: '0777'
 
-    
-    
-
-    - name: Unarchive a file that needs to be downloaded (added in 2.0)
-      ansible.builtin.unarchive:
+    - name: unarchive commandlinetools-linux-6858069_latest.zip
+      unarchive:
         src: https://dl.google.com/android/repository/commandlinetools-linux-6858069_latest.zip
+        dest: /tmp/
+        remote_src: yes
+    
+    - name: Copy files in directory for $ANDROID_HOME/cmdline-tools/tools/
+      copy:
+        src: /tmp/cmdline-tools/
         dest: /usr/lib/android-sdk/cmdline-tools/tools/
         remote_src: yes
+    
 
 
 
